Fix for the panel arrow in the collapsed state in the Editor

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_editor_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_editor_default.less
@@ -175,6 +175,9 @@
         font-size: 16px;
         margin-top: 0px;
       }
+      legend.collapsed[data-gn-slide-toggle]:before {
+        content: "\f105";
+      }
       table {
         .col-sm-2, .col-sm-9 {
           padding-right: 0;
